--- a/src/main/resources/templates/question_list.html
+++ b/src/main/resources/templates/question_list.html
@@ -10,24 +10,21 @@
 
 <table>
     <thead>
-        <tr>
-            <th>순번</th>
-            <th>제목</th>
-            <th>작성일시</th>
-        </tr>
+    <tr>
+        <th>제목</th>
+        <th>작성일시</th>
+    </tr>
     </thead>
     <tbody>
-<!--    th:each="question : ${questionList}"이다. 여기서 th:는 타임리프에서 사용하는 속성임을 나타내는데, 바로 이 부분이 자바 코드와 연결된다.
-        QuestionController의 list 메서드에서 조회한 질문 목록 데이터를 ‘questionList’라는 이름으로 Model 객체에 저장했다. 타임리프는 Model 객체에 저장한 questionList를 ${questionList}로 읽을 수 있다. 위의 코드는 questionList에 저장된 데이터를 하나씩 꺼내 question 변수에 대입한 후 questionList의 개수만큼 반복하며 <tr> ... </tr> 문장을 출력하라는 의미이다. 자바의 for each 문을 떠올리면 쉽게 이해할 수 있을 것이다.
--->
-        <tr th:each="question, loop : ${questionList}">
-            <td th:text="${loop.count}"></td>
-            <td th:text="${question.subject}"></td>
-<!--            <td th:text="${question.createDate}"></td>-->
-            <td>[[${question.createDate}]]</td>
-        </tr>
+    <tr th:each="question, index : ${questionList}">
+        <td>
+            <a th:href="@{|/question/detail/${question.id}|}" th:text="${question.subject}"></a>
+        </td>
+        <td th:text="${question.createDate}"></td>
+    </tr>
     </tbody>
 </table>
+
 
 </body>
 </html>
