--- a/src/main/resources/templates/question_list.html
+++ b/src/main/resources/templates/question_list.html
@@ -1,30 +1,95 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+<!--<link rel="stylesheet" type="text/css" th:href="@{/bootstrap.min.css}">-->
+<!--
+테이블 항목으로 '번호'를 추가했다. 번호는 loop.count를 사용하여 표시한다. loop.count는 questionList의 항목을 th:each로 반복할 때 현재의 순서를 나타낸다.
+그리고 날짜를 보기 좋게 출력하기 위해 타임리프의 #temporals.format 기능을 사용했다. #temporals.format은 #temporals.format(날짜 객체, 날짜 포맷)와 같이 사용하는데, 날짜 객체를 날짜 포맷에 맞게 변환한다.
+우리는 가장 윗줄에 bootstrap.min.css를 사용할 수 있도록 링크를 추가했다.
+그리고 위에서 사용한 class="container my-3", class="table", class="table-dark 등은 bootstrap.min.css에 이미 정의되어 있는 클래스들로 간격을 조정하고 테이블에 스타일을 지정하는 용도로 사용했다.
+-->
 
-<h2>Hello Template</h2>
+<!--
+layout.html 템플릿을 상속하려고 <html layout:decorate="~{layout}">을 사용했다.
+타임리프의 layout:decorate 속성은 템플릿의 레이아웃(부모 템플릿, 여기서는 layout.html)으로 사용할 템플릿을 설정한다.
+속성값인 ~{layout}이 바로 layout.html 파일을 의미한다.
+-->
+<html layout:decorate="~{layout}">
+<!--부모 템플릿의 th:block 요소의 내용이 자식 템플릿의 div 요소의 내용으로 교체된다.-->
+<div layout:fragment="content" class="container my-3">
+    <table class="table">
+        <thead class="table-dark">
+        <tr>
+            <th>번호</th>
+            <th>제목</th>
+            <th>작성일시</th>
+        </tr>
+        </thead>
+        <tbody>
+<!--        <tr th:each="question, loop : ${questionList}">-->
+        <tr th:each="question, loop : ${paging}">
+<!--            <td th:text="${loop.count}"></td>-->
+            <!-- 게시물 번호 = 전체 게시물 개수 - (현재 페이지 * 페이지당 게시물 개수) - 나열 인덱스 -->
+            <td th:text="${paging.getTotalElements - (paging.number * paging.size) - loop.index}"></td>
+            <td>
+                <a th:href="@{|/question/detail/${question.id}|}" th:text="${question.subject}"></a>
+                <span class="text-danger small ms-2" th:if="${#lists.size(question.answerList) > 0}" th:text="${#lists.size(question.answerList)}"></span>
+            </td>
+            <td th:text="${#temporals.format(question.createDate, 'yyyy-MM-dd HH:mm')}"></td>
+        </tr>
+        </tbody>
+    </table>
 
-<table>
-    <thead>
-    <tr>
-        <th>제목</th>
-        <th>작성일시</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr th:each="question, index : ${questionList}">
-        <td>
-            <a th:href="@{|/question/detail/${question.id}|}" th:text="${question.subject}"></a>
-        </td>
-        <td th:text="${question.createDate}"></td>
-    </tr>
-    </tbody>
-</table>
+    <!-- 페이징처리 시작 -->
 
+<!--
+    페이지 리스트를 보기 좋게 표시하기 위해 부트스트랩의 pagination 컴포넌트를 이용했다.
+    이 템플릿에 사용한 pagination, page-item, page-link 등이 pagination 컴포넌트의 클래스로, pagination은 ul 요소 안에 있는 내용을 꾸밀 수 있고,
+    page-item은 각 페이지 번호나 '이전', '다음' 버튼을 나타내도록 하고, page-link는 '이전', '다음' 버튼에 링크를 나타낸다.
 
-</body>
-</html>
+    부트스트랩의 pagination을 자세히 알고 싶다면 https://getbootstrap.com/docs/5.3/components/pagination/를 참고하자.
+
+    이전 페이지가 없는 경우에는 '이전' 링크가 비활성화(disabled)되도록 했다. '다음' 링크의 경우도 마찬가지 방법으로 적용했다.
+    그리고 th:each 속성을 사용해 전체 페이지 수만큼 반복하면서 해당 페이지로 이동할 수 있는 '이전', '다음' 링크를 생성했다.
+    이때 반복하던 도중 요청 페이지가 현재 페이지와 같을 경우에는 active 클래스를 적용하여 페이지 링크에 파란색 배경이 나타나도록 했다.
+
+    타임리프의 th:classappend="조건식 ? 클래스_값"은 조건식이 참인 경우 '클래스_값'을 class 속성에 추가한다.
+
+    위 템플릿에 사용한 주요 페이징 기능을 표로 정리해 보았다.
+
+    페이징 기능 관련 주요 코드	설명
+    th:classappend="${!paging.hasPrevious} ? 'disabled'"	        이전 페이지가 없으면 '이전' 링크를 비활성화한다.
+    th:classappend="${!paging.hasNext} ? 'disabled'"	            다음 페이지가 없으면 '다음' 링크를 비활성화한다.
+    th:href="@{|?page=${paging.number-1}|}"	                        이전 페이지 링크를 생성한다.
+    th:href="@{|?page=${paging.number+1}|}"	                        다음 페이지 링크를 생성한다.
+    th:each="page: ${#numbers.sequence(0, paging.totalPages-1)}"	0부터 전체 페이지 수 만큼 이 요소를 반복하여 생성한다. 이때 현재 순번을 page 변수에 대입한다.
+    th:classappend="${page == paging.number} ? 'active'"	        반복 구간 내에서 해당 페이지가 현재 페이지와 같은 경우 active 클래스를 적용한다.
+
+    한 가지 더 설명하면, #numbers.sequence(시작 번호, 끝 번호)는 시작 번호부터 끝 번호까지 정해진 범위만큼 반복을 만들어 내는 타임리프의 기능이다.
+-->
+    <div th:if="${!paging.isEmpty()}">
+        <ul class="pagination justify-content-center">
+            <li class="page-item" th:classappend="${!paging.hasPrevious} ? 'disabled'">
+                <a class="page-link"
+                   th:href="@{|?page=${paging.number-1}|}">
+                    <span>이전</span>
+                </a>
+            </li>
+<!--
+            <li th:each="page: ${#numbers.sequence(0, paging.totalPages-1)}" th:classappend="${page == paging.number} ? 'active'" class="page-item">
+                <a th:text="${page}" class="page-link" th:href="@{|?page=${page}|}"></a>
+            </li>
+-->
+            <!-- 현재 페이지 기준으로 좌우 5개씩 페이지 번호가 표시되도록 만든다. 즉, 반복문 내에서 표시되는 페이지가 현재 페이지를 의미하는 paging.number보다 5만큼 작거나 큰 경우에만 표시되도록 한 것이다. -->
+            <li th:each="page: ${#numbers.sequence(0, paging.totalPages-1)}" th:if="${page >= paging.number-5 and page <= paging.number+5}" th:classappend="${page == paging.number} ? 'active'" class="page-item">
+                <a th:text="${page+1}" class="page-link" th:href="@{|?page=${page}|}"></a>
+            </li>
+
+            <li class="page-item" th:classappend="${!paging.hasNext} ? 'disabled'">
+                <a class="page-link" th:href="@{|?page=${paging.number+1}|}">
+                    <span>다음</span>
+                </a>
+            </li>
+        </ul>
+    </div>
+    <!-- 페이징처리 끝 -->
+
+    <a th:href="@{/question/create}" class="btn btn-primary">질문 등록하기</a>
+</div>
