--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -53,5 +53,18 @@ body 요소 안의 <th:block layout:fragment="content"></th:block>은 layout.htm
 <!-- Bootstrap JS -->
 <script th:src="@{/bootstrap.min.js}"></script>
 
+<!-- 자바스크립트 Start
+자바스크립트는 HTML 구조에서 다음과 같이 </body> 태그 바로 위에 삽입하는 것을 추천한다.
+왜냐하면 화면 출력이 완료된 후에 자바스크립트가 실행되는 것이 좋기 때문이다.
+화면 출력이 완료되지 않은 상태에서 자바스크립트를 실행하면 오류가 발생할 수도 있고 화면 로딩이 지연될 수도 있다.
+따라서 각 템플릿에서 자바스크립트를 </body> 태그 바로 위에 삽입하고, 상속할 수 있도록 다음과 같이 layout.html을 수정해 보자.
+
+layout.html을 상속하는 템플릿들에서 content 블록을 구현하게 했던 것과 마찬가지 방법으로
+script 블록을 구현할 수 있도록 </body> 태그 바로 위에 <th:block layout:fragment="script"></th:block> 블록을 추가했다.
+이렇게 하면 이제 layout.html을 상속하는 템플릿은 자바스크립트의 삽입 위치를 신경 쓰지 않아도 되고, 필요할 경우에 스크립트 블록을 구현하여 자바스크립트를 작성할 수 있다.
+-->
+<th:block layout:fragment="script"></th:block>
+<!-- 자바스크립트 End -->
 </body>
+
 </html>
